hphp/test/slow/type_annotation/type_annotation_classes3.php.expectf
Fatal error: class NonExistentClass does not exist in %s on line 7
